--- a/_includes/nav.html
+++ b/_includes/nav.html
@@ -1,6 +1,7 @@
-<nav class="navbar navbar-expand-lg navbar-dark bg-dark">
-  <div class="container">
-    <a class="navbar-brand" href="/">Navbar</a>
+<nav class="navbar navbar-expand-lg navbar-dark bg-dark fixed-top">
+  <div class="container" data-aos="fade-down">
+    <img src="/img/global/logo.png" alt="" style="max-height:40px; max-width:auto;">
+    <a class="navbar-brand pl-3" href="/">The Shame Pile</a>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
     </button>
@@ -8,12 +9,15 @@
     <div class="collapse navbar-collapse" id="navbarSupportedContent">
       <ul class="navbar-nav ml-auto">
         <li class="nav-item {% if page.url == "/features/" %}active{% endif %}">
-          <a class="nav-link" href="/features">Features</a>
+          <a class="nav-link" href="/videos">Videos</a>
+        </li>
+        <li class="nav-item {% if page.url == "/blog/" %}active{% endif %}">
+          <a class="nav-link" href="/podcast">Podcast</a>
         </li>
         <li class="nav-item {% if page.url == "/blog/" %}active{% endif %}">
           <a class="nav-link" href="/blog">Blog</a>
         </li>
-        <li class="nav-item dropdown {% if page.url == "/resources/" %}active{% endif %}">
+        <!-- <li class="nav-item dropdown {% if page.url == "/resources/" %}active{% endif %}">
           <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
             Resources
           </a>
@@ -23,15 +27,15 @@
             <div class="dropdown-divider"></div>
             <a class="dropdown-item" href="#">Something else here</a>
           </div>
-        </li>
+        </li> -->
       </ul>
 
-      <form class="form-inline my-0" action="/search" method="get">
+      <!-- <form class="form-inline my-0" action="/search" method="get">
         <input class="form-control ml-2" type="search" id="search-box" name="query" placeholder="Search" aria-label="Search">
         <div class="input-group-append">
-          <button class="btn btn-outline-primary ml-2" type="submit" value="search">Search</button>
+          <button class="btn btn-outline-light ml-2" type="submit" value="search">Search</button>
         </div>
-      </form>
+      </form> -->
 
     </div>
   </div>
