--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -3,9 +3,10 @@
 <head>
   {% include head.html %}
 </head>
-<body>
+<body class="bg-dark text-light">
   {% include nav.html %}
   {{ content }}
+  {% include social.html %}
   {% include footer.html %}
   {% include scripts.html %}
 </body>
