--- a/css/style.scss
+++ b/css/style.scss
@@ -1,8 +1,11 @@
 ---
 ---
 // Custom
-* {
-  font-family: 'Lato', sans-serif;
+h1, h2, h3, h4, h5, h6{
+  font-family: 'Nunito', sans-serif !important;
+}
+p {
+  font-family: 'Lato', sans-serif !important;
 }
 .cover {
   height:75vh;
