--- a/_includes/head.html
+++ b/_includes/head.html
@@ -8,6 +8,6 @@
 <link rel="stylesheet" href="{{ "/src/animateCSS/animate.min.css" | prepend: site.baseurl }}">
 <link rel="stylesheet" href="{{ "/src/aos/aos.css" | prepend: site.baseurl }}" >
 <!-- Fonts -->
-<link href="https://fonts.googleapis.com/css?family=Lato:300,400,700" rel="stylesheet">
+<link href="https://fonts.googleapis.com/css?family=Lato:300,400,700|Nunito:400" rel="stylesheet">
 <link href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet" integrity="sha384-wvfXpqpZZVQGK6TAh5PVlGOfQNHSoD2xbE+QkPxCAFlNEevoEH3Sl0sibVcOQVnN" crossorigin="anonymous">
 <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
