--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -3,52 +3,52 @@ layout: default
 ---
 
 <!-- Page Header -->
-{% if page.img.src %}
-<header class="masthead py-5 mb-3" style="background-image: url('{{ page.img.src | prepend: site.baseurl | replace: '//', '/' }}')">
-  {% else %}
-  <header class="masthead">
-    {% endif %}
-    <div class="overlay"></div>
-    <div class="container">
-      <div class="row">
-        <div class="col-lg-8 col-md-10 mx-auto">
-          <div class="post-heading">
-            <span class="meta">
-              Posted by
-              <a href="#">{{ page.author }}</a>
-              on {{ page.date | date: '%B %d, %Y' }} &middot; {% include modules/read_time.html
-              content=page.content %}
-            </span>
-            <h1 class="display-4">{{ page.title }}</h1>
-          </div>
-        </div>
-      </div>
-    </div>
-  </header>
-
+<header class="jumbotron rounded-0" style="background-image: url('{{ page.img.src | prepend: site.baseurl | replace: '//', '/' }}'); background-position: center; background-repeat: no-repeat; background-size: cover;">
   <div class="container">
     <div class="row">
       <div class="col-lg-8 col-md-10 mx-auto">
-
-        {{ content }}
-
-        <hr>
-
-        <div class="clearfix">
-
-          {% if page.previous.url %}
-          <a class="btn btn-primary float-left" href="{{ page.previous.url | prepend: site.baseurl | replace: '//', '/' }}"
-            data-toggle="tooltip" data-placement="top" title="{{ page.previous.title }}">&larr; Previous<span class="d-none d-md-inline">
-              Post</span></a>
-          {% endif %}
-          {% if page.next.url %}
-          <a class="btn btn-primary float-right" href="{{ page.next.url | prepend: site.baseurl | replace: '//', '/' }}"
-            data-toggle="tooltip" data-placement="top" title="{{ page.next.title }}">Next<span class="d-none d-md-inline">
-              Post</span> &rarr;</a>
-          {% endif %}
-
+        <div class="post-heading">
+          <span class="meta">
+            Posted by
+            <a href="#">{{ page.author }}</a>
+            on {{ page.date | date: '%B %d, %Y' }} &middot; {% include modules/read_time.html
+            content=page.content %}
+          </span>
+          <h1 class="display-4">{{ page.title }}</h1>
         </div>
-
       </div>
     </div>
   </div>
+</header>
+
+
+
+
+
+
+<div class="container">
+  <div class="row">
+    <div class="col-lg-8 col-md-10 mx-auto">
+
+      {{ content }}
+
+      <hr>
+
+      <div class="clearfix pb-5">
+
+        {% if page.previous.url %}
+        <a class="btn btn-light float-left" href="{{ page.previous.url | prepend: site.baseurl | replace: '//', '/' }}"
+          data-toggle="tooltip" data-placement="top" title="{{ page.previous.title }}">&larr; Previous<span class="d-none d-md-inline">
+            Post</span></a>
+        {% endif %}
+        {% if page.next.url %}
+        <a class="btn btn-light float-right" href="{{ page.next.url | prepend: site.baseurl | replace: '//', '/' }}"
+          data-toggle="tooltip" data-placement="top" title="{{ page.next.title }}">Next<span class="d-none d-md-inline">
+            Post</span> &rarr;</a>
+        {% endif %}
+
+      </div>
+
+    </div>
+  </div>
+</div>
