--- a/_includes/globals/head.html
+++ b/_includes/globals/head.html
@@ -5,6 +5,7 @@
 <!-- CSS -->
 <link rel="stylesheet" href="{{ "/css/gradients.css" | prepend: site.baseurl }}">
 <link rel="stylesheet" href="{{ "/css/style.css" | prepend: site.baseurl }}">
+<link rel="stylesheet" href="{{ "/css/hero-image.css" | prepend: site.baseurl }}">
 <link rel="stylesheet" href="{{ "/src/animateCSS/animate.min.css" | prepend: site.baseurl }}">
 <link rel="stylesheet" href="{{ "/src/aos/aos.css" | prepend: site.baseurl }}" >
 <!-- Fonts -->
