--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -3,7 +3,7 @@ layout: default
 ---
 
 <!-- Page Header -->
-<header class="jumbotron rounded-0" style="background-image: url('{{ page.img.src | prepend: site.baseurl | replace: '//', '/' }}'); background-position: center; background-repeat: no-repeat; background-size: cover;">
+<div class="jumbotron rounded-0" style="background-image: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)), url('{{ page.img.src | prepend: site.baseurl | replace: '//', '/' }}'); background-position: center; background-repeat: no-repeat; background-size: cover;">
   <div class="container">
     <div class="row">
       <div class="col-lg-8 col-md-10 mx-auto">
@@ -19,7 +19,7 @@ layout: default
       </div>
     </div>
   </div>
-</header>
+</div>
 
 <div class="container">
   <div class="row">
