--- a/_includes/blogs/all-post-01.html
+++ b/_includes/blogs/all-post-01.html
@@ -5,12 +5,12 @@
       <!-- Post List -->
       {% for post in site.posts limit : 5 %}
 
-      <article class="post-preview pb-5" data-aos="zoom-in">
+      <article class="post-preview pb-5">
         <a href="{{ post.url | prepend: site.baseurl | replace: '//', '/' }}">
 
           <div class="card text-white mb-3 border-0">
             <img class="img-fluid rounded" src="{{ post.img.src }}" alt="{{ post.img.alt }}">
-            <div class="card-img-overlay">
+            <div class="card-img-overlay" style="background-image: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5))">
               <p class="post-meta">
                 Posted by
                 {% if post.author %}
