--- a/_includes/heros/hero-01.html
+++ b/_includes/heros/hero-01.html
@@ -1,7 +1,7 @@
 <div id="hero" class="cover bg-dark text-light">
   <div class="container">
     <div class="row">
-      <div class="col-md" data-aos="fade-right">
+      <div class="col-md">
         <h1 class="display-4 text-gradient-blue">Walk of Shame</h1>
         <p class="lead">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
         <button class="btn-gradient-blue" href="#">Learn More</button>
