--- a/_includes/heros/hero-02.html
+++ b/_includes/heros/hero-02.html
@@ -1,5 +1,5 @@
-<div class="jumbotron rounded-0 bg-gradient-blue mb-5" data-aos="zoom-out">
-  <div class="container justify-content-md-center">
+<div class="jumbotron rounded-0 bg-gradient-blue mb-5">
+  <div class="container justify-content-center">
 
     <div class="col"></div>
     <div class="col-lg-8 col-md-10 mx-auto text-center">
